test/fail_compilation/objconst1fail.d

void main()
{
	const(Object) copy;
	const(Object) value;
	copy = value;
}